added language icon

--- a/Amazon.html
+++ b/Amazon.html
@@ -28,6 +28,13 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
          </div>
+
+         <div class="language">
+            <div class="search-language">
+                <i class="fa-solid fa-language"></i>
+            </div>
+            <p>EN</p>
+         </div>
     </div>
     
 </body>
