added returns and orders

--- a/Amazon.html
+++ b/Amazon.html
@@ -29,11 +29,21 @@
             </div>
          </div>
 
-         <div class="language">
+         <div class="language border" >
             <div class="search-language">
                 <i class="fa-solid fa-language"></i>
             </div>
             <p>EN</p>
+         </div>
+         
+         <div class="sign-in">
+            <p class="sign1">hello, sign in</p>
+            <p class="sign2">Account & Lists</p>
+         </div>
+
+         <div class="return-order">
+            <p class="order1">Returns</p>
+            <p class="order2">& Orders</p>
          </div>
     </div>
     
