added cart feature

--- a/Amazon.html
+++ b/Amazon.html
@@ -45,6 +45,13 @@
             <p class="order1">Returns</p>
             <p class="order2">& Orders</p>
          </div>
+
+         <div class="cart">
+            <div class="cart-icon">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <p class="cart-para">Cart</p>
+         </div>
     </div>
     
 </body>
