added white border feature

--- a/Amazon.html
+++ b/Amazon.html
@@ -36,22 +36,35 @@
             <p>EN</p>
          </div>
          
-         <div class="sign-in">
+         <div class="sign-in border">
             <p class="sign1">hello, sign in</p>
             <p class="sign2">Account & Lists</p>
          </div>
 
-         <div class="return-order">
+         <div class="return-order border">
             <p class="order1">Returns</p>
             <p class="order2">& Orders</p>
          </div>
 
-         <div class="cart">
+         <div class="cart border">
             <div class="cart-icon">
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
-            <p class="cart-para">Cart</p>
+            <span class="cart-para ">Cart</span>
          </div>
+    </div>
+
+    <div class="lower-nav-bar">
+        <div class="all-bar border">
+            <i class="fa-solid fa-bars"></i>     
+        </div>
+        <span class="lower-all">All</span>
+        <a href="#" class="lower-links border"> Today's Deals</a>
+        <a href="#" class="lower-links border">Registry</a>
+        <a href="#" class="lower-links border">Prime video</a>
+        <a href="#" class="lower-links border">Gift Cards</a>
+        <a href="#" class="lower-links border">Customer Service</a>
+        <a href="#"class="lower-links border">Sell</a>
     </div>
     
 </body>
