--- a/Amazon.html
+++ b/Amazon.html
@@ -56,15 +56,26 @@
 
     <div class="lower-nav-bar">
         <div class="all-bar border">
-            <i class="fa-solid fa-bars"></i>     
+            <i class="fa-solid fa-bars"></i>  
+            <span class="lower-all">All</span>
         </div>
-        <span class="lower-all">All</span>
         <a href="#" class="lower-links border"> Today's Deals</a>
         <a href="#" class="lower-links border">Registry</a>
         <a href="#" class="lower-links border">Prime video</a>
         <a href="#" class="lower-links border">Gift Cards</a>
         <a href="#" class="lower-links border">Customer Service</a>
         <a href="#"class="lower-links border">Sell</a>
+    </div>
+
+    <div class="background-image">
+        <p class="back-sent">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. &nbsp;<a href="#" class="sentlink">  Click here to go to amazon.in</a> </p>
+    </div>
+
+    <div class="shopping-page">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
     </div>
     
 </body>
