--- a/Amazon.html
+++ b/Amazon.html
@@ -72,10 +72,16 @@
     </div>
 
     <div class="shopping-page">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
+        <div class="box1 box">
+            <div class="box1-sub">
+                <h2>Gifts for Mother's Day</h2>
+                <a href="#"><img src="/Picture/gift_image.jpg" alt="giftpic" class="img-content" width="100%" ></a>
+            <a href="#">See more</a>
+            </div>
+        </div>
+        <div class="box2 box">2</div>
+        <div class="box3 box">3</div>
+        <div class="box4 box">4</div>
     </div>
     
 </body>
