added more products

--- a/Amazon.html
+++ b/Amazon.html
@@ -70,19 +70,62 @@
     <div class="background-image">
         <p class="back-sent">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. &nbsp;<a href="#" class="sentlink">  Click here to go to amazon.in</a> </p>
     </div>
-
+ <main>
     <div class="shopping-page">
-        <div class="box1 box">
-            <div class="box1-sub">
-                <h2>Gifts for Mother's Day</h2>
-                <a href="#"><img src="/Picture/gift_image.jpg" alt="giftpic" class="img-content" width="100%" ></a>
-            <a href="#">See more</a>
+        <div class="box1 box"> 
+            <div class="content">
+                <h2>Gifts for Mother's Day</h2> <br>
+                <img src="/Picture/gift_image.jpg" alt="gift image" width="100%"> <br> 
+                <a href="#">See more</a>
             </div>
         </div>
-        <div class="box2 box">2</div>
-        <div class="box3 box">3</div>
-        <div class="box4 box">4</div>
+        <div class="box2 box">
+            <div class="content2">
+                <h2>Toys under $25</h2><br>
+                <img src="/Picture/teady _bear.jpg" alt="gift image" width="100%" >
+                <a href="#">Shop now</a>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="content3">
+                <h2>Get your game on</h2><br>
+                <img src="/Picture/game_pic.jpg" alt="gift image" width="100%">
+                <a href="#">Shop gaming</a>
+            </div>
+
+        </div>
+        <div class="box4 box">
+            <div class="content4">
+                <h2>New home arrivals under $50</h2><br>
+                <img src="/Picture/tv.jpg" alt="gift image" width="100%">
+                <a href="#">Shop now</a>
+            </div>
+        </div>
     </div>
-    
+    <div class="shop-row">
+        <h2>Top picks for India</h2>
+        <div class="shop-content">
+            <img src="/Picture/watch.jpg" alt="watch">
+            <img src="/Picture/cooler.jpg" alt="cooler">
+            <img src="/Picture/vacum.jpg" alt="vacumer">
+            <img src="/Picture/medicne.jpg" alt="med">
+            <img src="/Picture/toilet.jpg" alt="">
+            <img src="/Picture/boxitem.jpg" alt="">
+            <img src="/Picture/bottel.jpg" alt="">
+        </div>
+    </div>
+    <div class="shop-row">
+        <h2>Best Sellers in Sports & Outdoors</h2>
+        <div class="shop-content">
+                <img src="/Picture/pen.jpg" alt="watch">
+                <img src="/Picture/bottlepic.jpg" alt="cooler">
+                <img src="/Picture/phone.jpg" alt="vacumer">
+                <img src="/Picture/colour.jpg" alt="med">
+                <img src="/Picture/bedsheet.jpg" alt="">
+                <img src="/Picture/charger.jpg" alt="">
+                <img src="/Picture/iphone.jpg" alt="">
+            </div>
+      </div>
+ </main>    
 </body>
 </html>
