modifeid main and added footer

--- a/Pixar Animation/Pixar.html
+++ b/Pixar Animation/Pixar.html
@@ -22,7 +22,70 @@
     <main>
         <div class="head-img">
             <a href="#"><img src="/PIxar Pics/mid pci.png" alt="disney elo" width="100%"></a>
+        <div class="main-content">
+            <div class="midpic1">
+                <img src="/PIxar Pics/animal.jpg" height="350px">
+            </div>
+            <div class="midpic2">
+                <img src="/PIxar Pics/wol_logo.png" height="150px">
+                <p>ALL EPISODES NOW STREAMING</p>
+                <img src="/PIxar Pics/d+.png" height="60px" >
+            </div>
         </div>
+        <div class="main-content3">
+            <img src="/PIxar Pics/Screenshot 2025-05-12 180423.png" height="270px">
+        </div> 
     </main>
+    <footer>
+        <div class="foot-panel">
+            <div class="referal-icons">
+                <i class="fa-brands fa-linkedin" style="font-size: 30px;"></i>
+                <i class="fa-brands fa-youtube" style="font-size: 30px;"></i>
+                <i class="fa-brands fa-facebook" style="font-size: 30px;"></i>
+                <i class="fa-brands fa-google" style="font-size: 30px;"></i>
+                <i class="fa-brands fa-apple" style="font-size: 30px;"></i>
+            </div>
+            <div class="foot-panel-links">
+                <p>Films</p>
+                <a href="#">Feature</a>
+                <a href="#">Shorts</a>
+                <a href="#">Series</a>
+                <a href="#">Sparks Shorts</a>
+                <a href="#">Documentries</a>
+                </div>
+            <div class="foot-panel-links">
+                <p>Tech</p>
+                <a href="#">Feature</a>
+                <a href="#">Shorts</a>
+                <a href="#">Series</a>
+                <a href="#">Sparks Shorts</a>
+                <a href="#">Documentries</a>
+                </div>
+            <div class="foot-panel-links">
+                <p>Careers</p>
+                <a href="#">Feature</a>
+                <a href="#">Shorts</a>
+                <a href="#">Documentries</a>
+                <a href="#">Sparks Shorts</a>
+                <a href="#">Documentries</a>
+
+                </div>
+            <div class="foot-panel-links">
+                <p>More</p>
+                <a href="#">Feature</a>
+                <a href="#">Shorts</a>
+                <a href="#">Series</a>
+                <a href="#">Sparks Shorts</a>
+                <a href="#">Documentries</a>
+                </div>  
+        </div>
+        <div class="foot-panel2">
+            <p>Do Not Sell or Share My Personal Information</p>
+            <p>Privacy Policy | Your US State Privacy Rights | Children's Online Privacy Policy | Interest Based Ads</p>
+            <p>© 1986-2025 Disney-Pixar</p>
+            <!-- <p>Privacy Policy | Your US State Privacy Rights | Children's Online Privacy Policy | Interest Based Ads |</p>
+            <p>© 1986-2025 Disney-Pixar</p> -->
+        </div>
+    </footer>
 </body>
 </html>
